Changing password and listing StaffUsers
